--- a/package.json
+++ b/package.json
@@ -3,23 +3,29 @@
   "description": "The Todd Coin Cryptocurrency",
   "scripts": {
     "build": "tsc",
+    "clean": "rm -rf ./dist",
     "format": "prettier --write .",
-    "start": "node ./dist/cli.js"
+    "open": "open http://localhost:3000",
+    "start": "node ./dist/index.js",
+    "watch": "nodemon --watch src -e ts --exec \"npm run build && npm run start\""
   },
   "bin": {
     "todd-coin": "./dist/cli.js"
   },
   "main": "dist/cli.js",
   "dependencies": {
-    "@types/elliptic": "^6.4.14",
-    "@types/uuid": "^8.3.4",
-    "@types/yargs": "^17.0.9",
+    "@hapi/boom": "^9.1.4",
+    "@hapi/hapi": "^20.2.1",
     "crypto-js": "^4.1.1",
     "elliptic": "^6.5.4",
     "uuid": "^8.3.2",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
+    "@types/elliptic": "^6.4.14",
+    "@types/uuid": "^8.3.4",
+    "@types/yargs": "^17.0.9",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
