--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "format": "prettier --write .",
     "open": "open http://localhost:3000",
     "start": "node ./dist/index.js",
+    "start-db": "docker-compose -f docker-compose.yml up",
+    "stop-db": "docker-compose -f docker-compose.yml down",
     "watch": "nodemon --watch src -e ts --exec \"npm run build && npm run start\""
   },
   "bin": {
@@ -16,17 +18,28 @@
   "dependencies": {
     "@hapi/boom": "^9.1.4",
     "@hapi/hapi": "^20.2.1",
+    "axios": "^0.26.1",
     "crypto-js": "^4.1.1",
     "elliptic": "^6.5.4",
+    "lodash": "^4.17.21",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.17.0",
+    "ts-japi": "^1.6.1",
     "uuid": "^8.3.2",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
     "@types/elliptic": "^6.4.14",
+    "@types/hapi__boom": "^9.0.1",
+    "@types/hapi__hapi": "^20.0.10",
+    "@types/lodash": "^4.14.181",
+    "@types/node": "^17.0.23",
     "@types/uuid": "^8.3.4",
     "@types/yargs": "^17.0.9",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
+    "sequelize-cli": "^6.4.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   }
