--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.26.1",
     "crypto-js": "^4.1.1",
     "elliptic": "^6.5.4",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
