--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 # Use postgres/example user/password credentials
 version: "3.1"
 
+# todo - persist the db between start/stop cycles.
+
 services:
   db:
     image: postgres
