--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
 version: "3.1"
 
-# todo - persist the db between start/stop cycles.
-
 services:
   db:
     image: postgres
@@ -12,3 +10,7 @@ services:
       POSTGRES_DB: todd-coin
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data
+volumes:
+  pgdata:
