--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.1"
+version: "3.9"
 
 services:
   db:
@@ -12,5 +12,20 @@ services:
       POSTGRES_PASSWORD: secret
     volumes:
       - ./pgdata:/var/lib/postgresql/data
+  api:
+    image: tbrunia/todd-coin:latest
+    depends_on:
+      - db
+    restart: always
+    ports:
+      - "3000:3000"
+    environment:
+      DB_NAME: todd-coin
+      DB_USERNAME: postgres
+      DB_PASSWORD: secret
+      DB_HOST: db
+      DB_PORT: 5432
+      API_HOST: 0.0.0.0
+      API_PORT: 3000
 volumes:
   pgdata:
