--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@hapi/boom": "^9.1.4",
     "@hapi/hapi": "^20.2.1",
+    "@types/pg": "^8.6.5",
     "axios": "^0.26.1",
     "crypto-js": "^4.1.1",
     "elliptic": "^6.5.4",
